# emails

./: .bandit  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml  setup.cfg  wait_for_db.sh
core/: models.py  serializers.py  tasks.py  urls.py  views.py
core/fixtures/: mails.json
core/migrations/: 0001_initial.py  0002_auto_20200418_1236.py
core/services/: mails.py
core/tests/factories/: email.py
core/tests/serializers/: test_attachment_serializer.py  test_email_serializer.py
core/tests/tasks/: test_sending_mails.py
core/tests/views/: test_emails_viewset.py
emails/: celery_app.py  urls.py
emails/settings/: base.py  dev.py  prod.py
mailhog/: auth-file
